# deadclock

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  README.md
scripts/: build_msys2.sh  deploy_tesseract_libs.sh
src/: Application.cpp  Application.h  CVManager.cpp  CVManager.h  ClockReader.cpp  ClockReader.h  InputManager.cpp  InputManager.h  Keyhook.cpp  Keyhook.h  NotificationManager.cpp  NotificationManager.h  PausableTimer.cpp  PausableTimer.h  SettingsManager.cpp  SettingsManager.h  TTSManager.cpp  TTSManager.h  TimerController.cpp  TimerController.h  WindowController.cpp  WindowController.h  main.cpp
src/data/: Common.h  KeyMap.h
src/gamestate/: CVManager.cpp  CVManager.h  GameStateTracker.cpp  GameStateTracker.h  OCRManager.cpp  OCRManager.h  Regions.cpp  Regions.h
src/input/: InputManager.cpp  InputManager.h  Keyhook.h
src/ui/: MainWindow.qml  OverlayWindow.qml
src/ui/components/: Constants.qml  DCButton.qml  Main.qml  Settings.qml  TimerBar.qml  TitleBar.qml
test/computer_vision/: CMakeLists.txt
test/computer_vision/src/: LabeledSlider.cpp  LabeledSlider.h  main.cpp
